@@ -100,11 +100,11 @@ final class HSQLDBConnector {
         IoUtils.closeHard(fos);
       }
     }
-    final URL hsqldbJarURL = driverJarFile.toURL();
+    final URL hsqldbJarURL = driverJarFile.toURI().toURL();
     final ClassLoader hsqldbClassloader = new URLClassLoader(new URL[]{hsqldbJarURL});
     try {
       final Class hsqldbDriverClass = hsqldbClassloader.loadClass(HSQLDB_DRIVER);
-      return (Driver) hsqldbDriverClass.newInstance();
+      return (Driver) hsqldbDriverClass.getConstructor().newInstance();
     } catch (final RuntimeException e) {
       throw e;
     } catch (final Exception e) {
